# myriad-2018

./: .gitignore  CMakeLists.txt  myriad.kdev4
.kdev4/: myriad.kdev4
src/: CMakeLists.txt  Exception.hpp  ImageHasher.cpp  ImageHasher.hpp  ImageInfo.cpp  ImageInfo.hpp  ImageScanner.cpp  ImageScanner.hpp  MergeEngine.cpp  MergeEngine.hpp  main.cpp
src/ksr/: detect.hpp  hash.hpp  mem_fn_ptr.hpp  mem_fn_traits.hpp
src/qtx/: CMakeLists.txt  EmissionFilter.hpp  QStringHash.hpp  SignalFilter.hpp  WorkerThread.cpp  WorkerThread.hpp
test/: attribution.md
